// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stepper /> should display a different icon per step 1`] = `
<div>
  <div>
    <div
      class="junipero stepper"
    >
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle active"
          />
          <div
            class="details active"
          >
            <span>
              Step 1
            </span>
            <span
              class="name"
            >
              Description 1
            </span>
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle"
          />
          <div
            class="details"
          >
            <span>
              Step 2
            </span>
            <span
              class="name"
            >
              Description 2
            </span>
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle"
          />
          <div
            class="details"
          >
            <span>
              Step 3
            </span>
            <span
              class="name"
            >
              Description 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Stepper /> should render step children with each status 1`] = `
<div>
  <div>
    <div
      class="junipero stepper"
    >
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle completed"
          />
          <div
            class="details completed"
          >
            <span>
              Step 1
            </span>
            <span
              class="name"
            >
              Description 1
            </span>
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle active"
          />
          <div
            class="details active"
          >
            <span>
              Step 2
            </span>
            <span
              class="name"
            >
              Description 2
            </span>
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle"
          />
          <div
            class="details"
          >
            <span>
              Step 3
            </span>
            <span
              class="name"
            >
              Description 3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Stepper /> should render steps prop with each status 1`] = `
<div>
  <div>
    <div
      class="junipero stepper"
    >
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle completed"
          />
          <div
            class="details completed"
          >
            <span>
              Step 1
            </span>
            <span
              class="name"
            />
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle active"
          />
          <div
            class="details active"
          >
            <span>
              Step 2
            </span>
            <span
              class="name"
            />
          </div>
        </div>
      </div>
      <div
        class="step"
      >
        <div
          class="content"
        >
          <div
            class="circle"
          />
          <div
            class="details"
          >
            <span>
              Step 3
            </span>
            <span
              class="name"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
